# arbitrage

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
alor/: __init__.py  analysis.py  api.py  backtest.py  data.py
alor/agent_api/: __init__.py  analysis.py  api.py  data.py  futures_analysis.py  main.py
alor/examples/: cointegration_example.py
alor/notebooks/: alor_api.ipynb  alor_api_2.ipynb  get_all_futures.ipynb
alor/tests/: __init__.py  test_api.py
core/: __init__.py  alor.py  analysis.py  app.py  backtest.py  backtest_improved.py  config.py  data.py  downloader.py  formatters.py  full_backtest.py  interfaces.py  main.py  pipeline.py  utils.py
data/: CHM5.csv  GKM5.csv  GZM5.csv  LKM5.csv  RNM5.csv  SPM5.csv  SRM5.csv  TNM5.csv  TTM5.csv  VBM5.csv
examples/: improved_backtest.py
notebooks/: alor_api_2.ipynb  backtest.ipynb  join_pairs.ipynb
tests/: test_api.py
